Aress7/src/objects/Equipment__c.object
<CustomObject>
    <fields>
        <fullName>Cost__c</fullName>
        <label>Cost</label>
        <precision>18</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Equipment_Code__c</fullName>
        <label>Equipment Code</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Equipment_Description__c</fullName>
        <label>Equipment Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Equipment_Family__c</fullName>
        <label>Equipment Family</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Circuit Protection</fullName>
                </value>
                <value>
                    <fullName>Cable Etc</fullName>
                </value>
                <value>
                    <fullName>Working at Height</fullName>
                </value>
                <value>
                    <fullName>Fixings</fullName>
                </value>
                <value>
                    <fullName>Groundwork</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Stock_Item__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Stock Item</label>
        <type>Checkbox</type>
    </fields>
    <label>Equipment</label>
    <nameField>
        <label>Equipment Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Equipment</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>